--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
     <div class="main-container">
       <ul class="nav">
         <li class="menu">
-          <a href="/"><i class="fa-solid fa-bars"></i></a>
+          <i class="fa-solid fa-bars"></i>
         </li>
         <li>
           <a href="./page1.html"><i class="fa-solid fa-house"></i></a>
