--- a/page4.html
+++ b/page4.html
@@ -17,23 +17,33 @@
   </head>
   <body>
     <div class="main-container">
-      <ul class="nav">
-        <li class="menu">
-          <i class="fa-solid fa-bars"></i>
-        </li>
-        <li>
-          <a href="./page1.html"><i class="fa-solid fa-house"></i></a>
-        </li>
-        <li>
-          <a href="./page2.html"><i class="fa-solid fa-user"></i></a>
-        </li>
-        <li>
-          <a href="./page3.html"><i class="fa-solid fa-paperclip"></i></a>
-        </li>
-        <li>
-          <a href="./page4.html"><i class="fa-solid fa-paper-plane"></i></a>
-        </li>
-      </ul>
+      <div class="side-section">
+        <ul class="nav">
+          <ul class="pop" id="side-bar">
+            <li class="active"><i class="fa-solid fa-house"></i>Home</li>
+            <li><i class="fa-solid fa-envelope"></i>Mail</li>
+            <li><i class="fa-solid fa-star"></i>Review</li>
+            <li><i class="fa-solid fa-cloud"></i>Cloud</li>
+            <li><i class="fa-solid fa-user"></i>Profile</li>
+            <li><i class="fa-regular fa-id-card"></i>Contact Us</li>
+          </ul>
+          <li class="menu" id="menu">
+            <i class="fa-solid fa-bars"></i>
+          </li>
+          <li>
+            <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+          </li>
+          <li>
+            <a href="./page2.html"><i class="fa-solid fa-user"></i></a>
+          </li>
+          <li>
+            <a href="./page3.html"><i class="fa-solid fa-paperclip"></i></a>
+          </li>
+          <li>
+            <a href="./page4.html"><i class="fa-solid fa-paper-plane"></i></a>
+          </li>
+        </ul>
+      </div>
       <main class="body">
         <h1>Page 4</h1>
         <!-- <p>
